# panasonic_cc

./: .env.example  .gitignore  CLAUDE.md  FINDINGS.md  README.md  hacs.json  info.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug.yaml
custom_components/panasonic_cc/: __init__.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  coordinator.py  manifest.json  number.py  select.py  sensor.py  strings.json  switch.py  water_heater.py
custom_components/panasonic_cc/translations/: fr.json
scripts/: explore_aquarea.py
specs/: aquarea_port.md
tests/: conftest.py  test_aquarea_climate_actions.py  test_aquarea_energy_sensors.py  test_aquarea_select_actions.py  test_aquarea_sensor.py  test_aquarea_switch.py  test_aquarea_switch_actions.py  test_aquarea_water_heater_actions.py  test_panasonic_sensor.py
