[project]
name = "panasonic-cc"
version = "2025.5.12"
description = "Panasonic Comfort Cloud & Aquarea Home Assistant integration"
requires-python = ">=3.14.2"

# Runtime deps – these mirror manifest.json requirements and are exported to requirements.txt
dependencies = [
    "aiohttp",
    "aio-panasonic-comfort-cloud==2025.5.1",
    "aioaquarea==1.0.6",
]

[tool.uv]
# Dev workflow:
#   uv sync --dev          → install/update .venv
#   uv add <pkg>           → add a dep (updates pyproject.toml + uv.lock)
#   uv remove <pkg>        → remove a dep
# When bumping a runtime dep version, also update:
#   - manifest.json → requirements[]
#   - requirements.txt  (manual, HA reads this file if no manifest)
# uv.lock is the source of truth for reproducible dev envs.

[tool.uv.sources]

[dependency-groups]
dev = [
    # Auth/exploration scripts
    "ipython",
    "python-dotenv",
    # Testing and type checking
    "pytest-homeassistant-custom-component>=0.13.320",
    "pytest-asyncio>=1.3.0",
    "mypy>=1.19.1",
]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Don't report errors inside HA's own code — only check our integration against its types.
module = "homeassistant.*"
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
